--- a/jjapra/src/main/resources/templates/success.html
+++ b/jjapra/src/main/resources/templates/success.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>SUCCESS</h1>
+    <form action="/api/issues" method="post">
+        <input type="submit" value="CreateIssue">
+    </form>
 </body>
 </html>
