--- a/jjapra/src/main/resources/templates/success.html
+++ b/jjapra/src/main/resources/templates/success.html
@@ -7,6 +7,10 @@
 <body>
     <h1>SUCCESS</h1>
     <form action="/api/issues" method="post">
+        <label for="title">TITLE:</label><br>
+        <input type="text" id="title" name="title"><br>
+        <label for="description">description:</label><br>
+        <input type="text" id="description" name="description"><br><br>
         <input type="submit" value="CreateIssue">
     </form>
 </body>
