--- a/jjapra/src/main/resources/templates/success.html
+++ b/jjapra/src/main/resources/templates/success.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>SUCCESS</h1>
-    <form action="/api/issues" method="post">
+    <form action="/saveIssues" method="post">
         <label for="title">TITLE:</label><br>
         <input type="text" id="title" name="title"><br>
         <label for="description">description:</label><br>
